fix dark mode issue, sticky issue and add categories story (#594)
* fix dark mode issue and add categories story

* fix bug of z index

* fix bug of z index

--- a/src/components/Combobox/components/ComboboxRenderers/ComboboxRenderers.module.scss
+++ b/src/components/Combobox/components/ComboboxRenderers/ComboboxRenderers.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex: auto;
   width: 100%;
-  background-color: var(--primary-background-color);
+  background-color: var(--secondary-background-color);
 }
 
 .dividerContainer {
@@ -21,4 +21,5 @@
 .sticky {
   position: sticky;
   top: 0;
+  z-index: 1;
 }
